2012-08-08  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSString.m: Add upper and lower case methods for literal
        strings.  Change other literal string methods to check that content
        is really utf8 in more places.  Generally simplify/cleanup a bit.

2012-08-02  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/GSValue.m: ([-isEqualToValue:]) add check for self equality
        and fix error checking tyep signature.
        * Source/Additions/GSObjCRuntime.m: (GSSelectorTypesMatch) fix to
        return a true BOOL value.

2012-07-31  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/Additions/GSMime.m: Optimisations for chunked encoding.
        a. Don't resize the buffer for each chunk ... that's very inefficient
        if the other end sends tiny chunks.  Instead, make the buffer big
        enough to handle all the available data, then shrink back to the
        decoded size.
        b. Move method call out of the loop handling individual bytes.

2012-07-30  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSData.m: ([setLength:]) increase size of buffer in chunks
        proportional to the current size ... so if we add small amounts to a
        buffer many, many times, we don't reallocate the memory for each tiny
        increment.  Should make accumulating large amounts of data into a
        buffer much more efficient.

2012-07-27  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSKeyValueObserving.m:
        Try fix for bug #36967

2012-07-27  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSXMLNode.m: Just report string value as description ...
        which appears to be what OSX does.
        * Tests/base/KVC/mutable.m: Add tests based on code by Riccardo.

2012-07-27  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSKeyValueObserving.m:
        * Source/GSFFIInvocation.m:
        * Source/GSPrivate.h:
        * Source/NSInvocation.m:
        * Source/cifframe.h: