@@ -1,7 +1,8 @@
 2012-08-08  Richard Frith-Macdonald <rfm@gnu.org>
 
-        * Source/GSString.m: Add upper and lower case methods for literal
-        strings.  Change other literal string methods to check that content
+        * Source/GSString.m: Simplify/remove upper and lower case conversion
+        to use superclass implementation avoiding toupper() and tolower().
+        Change other literal string methods to check that the content
         is really utf8 in more places.  Generally simplify/cleanup a bit.
 
 2012-08-02  Richard Frith-Macdonald <rfm@gnu.org>
